# multitenant-backend

./: .env  .env.test  .gitignore  LICENSE  README.md  alembic.ini  conftest.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 6c67aed5487b_make_role_code_nullable.py  8d0e30e550a9_add_field_comments.py  ab7d744ed557_add_user_roles_table.py  init_tables.py  update_timestamp_fields.py  update_user_department.py
app/: __init__.py  deps.py  main.py
app/api/v1/: __init__.py  api.py  base.py  log.py  menu.py  role.py  router.py  tenant.py  user.py
app/core/: config.py  log.py  security.py  tenant_tables.py
app/db/: __init__.py  base.py  base_class.py  session.py
app/db/migrations/: update_timezone.py
app/middleware/: logging.py
app/models/: __init__.py  base.py  public.py  tenant.py
app/schemas/: __init__.py  api.py  common.py  log.py  menu.py  role.py  tenant.py  token.py  user.py
app/utils/: audit.py  router_parser.py
docs/: README.md  base.md  log.md  menu.md  role.md  tenant.md  user.md
scripts/: data_struct.py  init_data.py  init_db.py  init_menu.py  sync_db.py  test_tenant_isolation.py  update_api.py  update_timezone.py
tests/: test_logs.py
web/: .env.development  .env.production  .eslint-global-variables.json  .gitignore  .prettierignore  .prettierrc.json  README.md  index.html  jsconfig.json  package.json  pnpm-lock.yaml  unocss.config.js  vite.config.js
web/i18n/: index.js
web/i18n/messages/: cn.json  en.json  index.js
web/public/: china.geo.json
web/settings/: index.js  theme.json
web/src/: App.vue  main.js
web/src/api/: index.js
web/src/assets/js/: icons.js
web/src/components/common/: AppFooter.vue  AppProvider.vue  LoadingEmptyWrapper.vue  ScrollX.vue
web/src/components/icon/: CustomIcon.vue  IconPicker.vue  SvgIcon.vue
web/src/components/page/: AppPage.vue  CommonPage.vue
web/src/composables/: index.js  useCRUD.js
web/src/directives/: index.js  permission.js
web/src/layout/: index.vue
web/src/router/: index.js
web/src/store/: index.js
web/src/styles/: reset.css
web/src/utils/: index.js
(+57 files in other folders)
