[project]
name = "multitenant-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.29.0",
    "bcrypt==4.3.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "crypto==1.4.1",
    "cryptography==45.0.2",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.115.12",
    "fastapi-cli==0.0.7",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "naked==0.1.32",
    "numpy==1.26.4",
    "openpyxl==3.1.2",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.1.3",
    "passlib==1.7.4",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pycryptodome==3.23.0",
    "pycryptodomex==3.23.0",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.4",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "rich-toolkit==0.14.6",
    "rsa==4.9.1",
    "shellescape==3.8.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.23",
    "starlette==0.46.2",
    "typer==0.15.4",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ujson==5.10.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
]

[tool.setuptools]
packages = ["app", "alembic"]